--- a/website/docs/README.mdx
+++ b/website/docs/README.mdx
@@ -5,13 +5,13 @@ sidebar_label: Introduction
 
 # Installation
 
-<PackageInstall packages={['graphql', 'graphql-yoga@next']} />
+<PackageInstall packages={['graphql', 'graphql-yoga@alpha']} />
 
 ## Basic Usage
 
 ```ts
-import { GraphQLSchema, GraphQLObjectType, GraphQLString } from 'graphql'
-import { GraphQLServer } from 'graphql-yoga'
+const { GraphQLServer } = require('graphql-yoga')
+const { GraphQLSchema, GraphQLObjectType, GraphQLString } = require('graphql')
 
 const schema = new GraphQLSchema({
   query: new GraphQLObjectType({
@@ -24,13 +24,11 @@ const schema = new GraphQLSchema({
     }),
   }),
 })
-
 // Provide your schema
 const server = new GraphQLServer({
   schema,
   isDev: process.env.NODE_ENV !== 'production',
 })
-
 // Start the server and explore http://localhost:4000/graphql
 server.start()
 ```
