--- a/website/docs/integrations/integration-with-koa.mdx
+++ b/website/docs/integrations/integration-with-koa.mdx
@@ -9,7 +9,7 @@ GraphQL Yoga can be integrated easily as a route to the existing Koa application
 
 ## Installation
 
-<PackageInstall packages={['graphql-yoga@alpha']} />
+<PackageInstall packages={['koa', 'graphql', 'graphql-yoga@alpha']} />
 
 ## Example
 
