--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -7,7 +7,7 @@ sidebar_label: Quick Start
 GraphQL Yoga is a batteries-included cross-platform [GraphQL over HTTP spec-compliant](https://github.com/graphql/graphql-over-http) GraphQL Server.
 It builds a GraphQL Server using [GraphQL Helix](https://www.graphql-helix.com/), [Envelop](https://envelop.dev) and [GraphQL Tools](https://graphql-tools.com).
 
-# Installation
+## Installation
 
 <PackageInstall packages={['graphql', 'graphql-yoga@alpha']} />
 
