--- a/website/docs/integrations/integration-with-express.mdx
+++ b/website/docs/integrations/integration-with-express.mdx
@@ -9,7 +9,7 @@ You can easily integrate GraphQL Yoga into your Express application with a few l
 
 ## Installation
 
-<PackageInstall packages={['graphql-yoga@alpha']} />
+<PackageInstall packages={['express', 'graphql', 'graphql-yoga@alpha']} />
 
 ## Example
 
