feat: add option to enable uploads

--- a/website/docs/extend-yoga/file-uploads.mdx
+++ b/website/docs/extend-yoga/file-uploads.mdx
@@ -30,6 +30,7 @@ const server = new GraphQLServer({
       readTextFile(file: Upload!): String!
     }
   `,
+  enableUploads: true,
   resolvers: {
     Query: {
       greetings: () => 'Hello World!',
