fix: minor things

--- a/website/docs/extend-yoga/apollo-federation.mdx
+++ b/website/docs/extend-yoga/apollo-federation.mdx
@@ -6,7 +6,7 @@ sidebar_label: Apollo Federation
 
 [Apollo Federation is a specification that applies microservice architecture through GraphQL APIs.](https://www.apollographql.com/docs/federation/)
 
-Thanks to [Envelop's Apollo Federation](https://www.envelop.dev/plugins/use-apollo-federation) plugin, we can use GraphQL Yoga to build our gateway server;
+Thanks to [Envelop's Apollo Federation](https://www.envelop.dev/plugins/use-apollo-federation) plugin, we can use GraphQL Yoga to build our gateway server.
 
 ## Installation
 
