--- a/website/docs/integrations/integration-with-express.mdx
+++ b/website/docs/integrations/integration-with-express.mdx
@@ -34,7 +34,7 @@ const graphQLServer = new GraphQLServer({
 
 // Bind GraphQL Yoga to `/graphql` endpoint
 // Here it takes the request and response objects and handles them internally
-app.use('/graphql', (req, res) => graphQLServer.requestListener(req, res))
+app.use('/graphql', graphQLServer.requestListener)
 
 app.listen(4000, () => {
   console.log('Running a GraphQL API server at http://localhost:4000/graphql')
