docs: recommend using Node.js 16

--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -4,10 +4,11 @@ title: Quick Start
 sidebar_label: Quick Start
 ---
 
-GraphQL Yoga is a batteries-included cross-platform [GraphQL over HTTP spec-compliant](https://github.com/graphql/graphql-over-http) GraphQL Server.
-It builds a GraphQL Server using [GraphQL Helix](https://www.graphql-helix.com/), [Envelop](https://envelop.dev) and [GraphQL Tools](https://graphql-tools.com).
+GraphQL Yoga is a batteries-included cross-platform [GraphQL over HTTP spec-compliant](https://github.com/graphql/graphql-over-http) GraphQL Server using [GraphQL Helix](https://www.graphql-helix.com/), [Envelop](https://envelop.dev) and [GraphQL Tools](https://graphql-tools.com).
 
 ## Installation
+
+> When using Node.js we recommend at least using version **16**. Using an older LTS version (such as 14) is still possible, but requires polyfilling APIs when using some features of GraphQL Yoga. You will receive user-friendly error messages that guide you on installing those polyfills.
 
 <PackageInstall packages={['graphql', 'graphql-yoga@alpha']} />
 
