better pubsub docs

--- a/website/docs/extend-yoga/graphiql.mdx
+++ b/website/docs/extend-yoga/graphiql.mdx
@@ -6,7 +6,7 @@ sidebar_label: GraphiQL
 
 [GraphiQL is an in-browser IDE for writing, validating, and testing GraphQL queries.](https://github.com/graphql/graphiql)
 
-You can configure GraphiQL or disable it completely with the `graphiql` option. By default, GraphQL Yoga enables GraphiQL in development mode.
+You can configure or completely disable GraphiQL with the `graphiql` option. By default, GraphiQL is only enabled in development mode.
 
 ## Example
 
