--- a/website/docs/integrations/integration-with-nextjs.mdx
+++ b/website/docs/integrations/integration-with-nextjs.mdx
@@ -16,10 +16,10 @@ sidebar_label: Next.js
 
 ```ts
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
-import { GraphQLServer } from 'graphql-yoga'
+import { createGraphQLServer } from 'graphql-yoga'
 import { NextApiRequest, NextApiResponse } from 'next'
 
-const server = new GraphQLServer({
+const server = createGraphQLServer({
   typeDefs: 'type Query {hello: String!}',
   resolvers: { Query: { hello: () => 'Hello World' } },
   cors: false,
