--- a/website/docs/extend-yoga/file-uploads.mdx
+++ b/website/docs/extend-yoga/file-uploads.mdx
@@ -18,10 +18,10 @@ You can use any kind of client supports GraphQL Upload specification.
 `file-upload-example.ts`
 
 ```ts
-import { GraphQLServer } from 'graphql-yoga'
+import { createGraphQLServer } from 'graphql-yoga'
 
 // Provide your schema
-const server = new GraphQLServer({
+const server = createGraphQLServer({
   typeDefs: /* GraphQL */ `
     type Query {
       greetings: String!
