--- a/website/docs/extend-yoga/graphiql.mdx
+++ b/website/docs/extend-yoga/graphiql.mdx
@@ -11,10 +11,10 @@ You can configure or completely disable GraphiQL with the `graphiql` option. By 
 ## Example
 
 ```ts
-import { createGraphQLServer } from 'graphql-yoga'
+import { createServer } from 'graphql-yoga'
 
 // Provide your schema
-const server = createGraphQLServer({
+const server = createServer({
   typeDefs: /* GraphQL */ `
     type Query {
       greetings: String!
