--- a/website/docs/extend-yoga/apollo-federation.mdx
+++ b/website/docs/extend-yoga/apollo-federation.mdx
@@ -15,7 +15,7 @@ Thanks to [Envelop's Apollo Federation](https://www.envelop.dev/plugins/use-apol
 ## Example
 
 ```ts
-import { createGraphQLServer } from 'graphql-yoga'
+import { createServer } from 'graphql-yoga'
 import { ApolloGateway } from '@apollo/gateway'
 import { useApolloFederation } from '@envelop/apollo-federation'
 
@@ -31,7 +31,7 @@ const gateway = new ApolloGateway({
 // Make sure all services are loaded
 await gateway.load()
 
-const server = createGraphQLServer({
+const server = createServer({
   schema: gateway.schema,
   plugins: [
     useApolloFederation({
