--- a/website/docs/integrations/integration-with-cf.mdx
+++ b/website/docs/integrations/integration-with-cf.mdx
@@ -19,9 +19,9 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/core` whic
 `cf-example.ts`
 
 ```ts
-import { createGraphQLServer } from '@graphql-yoga/core'
+import { createServer } from '@graphql-yoga/core'
 
-const graphQLServer = createGraphQLServer({
+const graphQLServer = createServer({
   typeDefs: /* GraphQL */ `
     type Query {
       hello: String
