--- a/website/docs/integrations/integration-with-deno.mdx
+++ b/website/docs/integrations/integration-with-deno.mdx
@@ -14,9 +14,9 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/core` whic
 
 ```ts
 import { serve } from 'https://deno.land/std@0.117.0/http/server.ts'
-import { createGraphQLServer } from 'https://cdn.skypack.dev/@graphql-yoga/core?dts'
+import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/core?dts'
 
-const graphQLServer = createGraphQLServer({
+const graphQLServer = createServer({
   typeDefs: /* GraphQL */ `
     type Query {
       hello: String
