--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -17,13 +17,13 @@ So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Y
 ## Example
 
 ```ts
-import { createGraphQLServer } from 'graphql-yoga'
+import { createServer } from 'graphql-yoga'
 import fastify from 'fastify'
 
 // This is the fastify instance you have created
 const app = fastify({ logger: true })
 
-const graphQLServer = createGraphQLServer({
+const graphQLServer = createServer({
   typeDefs: /* GraphQL */ `
     type Query {
       hello: String
