--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -12,7 +12,7 @@ You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQ
 
 In a SvelteKit project:
 
-<PackageInstall packages={['-D @graphql-yoga/core@0.3.0-canary-352ac0f.0']} />
+<PackageInstall packages={['-D @graphql-yoga/core@0.2.0-alpha.2']} />
 
 ## Example
 
