--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -34,6 +34,8 @@ const graphQLServer = createServer({
       hello: () => 'world',
     },
   },
+  // Integrate Fastify logger
+  logger: app.log,
 })
 
 /**
