clean readme, update type for Server handler

--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -12,7 +12,7 @@ You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQ
 
 In a SvelteKit project:
 
-<PackageInstall packages={['-D @graphql-yoga/core@alpha']} />
+<PackageInstall packages={['-D @graphql-yoga/core@0.2.0-alpha.3']} />
 
 ## Example
 
