--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -19,6 +19,7 @@ So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Y
 ```ts
 import { createServer } from 'graphql-yoga'
 import fastify from 'fastify'
+import { Readable } from 'stream'
 
 // This is the fastify instance you have created
 const app = fastify({ logger: true })
@@ -53,7 +54,10 @@ app.route({
     })
 
     reply.status(response.status)
-    reply.send(response.body)
+
+    // Converts ReadableStream to a NodeJS Stream
+    const nodeStream = Readable.from(response.body)
+    reply.send(nodeStream)
   },
 })
 
